@@ -6,6 +6,7 @@ Version explained:
 Version 4.0.11
  * CHANGE: when redifining a single parameter option using inheritence the value will be replaced
  * CHANGE: FlowSpec TRUE and FALSE value have been updated to use the latest RFC and are therefore inverted from previous versions
+ * CHANGE: an invalid netmask for a network will now cause ExaBGP to fail the parsing of the route (it can stop ExaBGP from starting with bad routes)
  * Feature: support for extended next-hop (RFC 5549)
  * Fix: regression pointed in #873
    patch: Malcolm Dodds
